--- a/settings.json
+++ b/settings.json
@@ -7,11 +7,11 @@
   "machine": "local",
   "control": "handler",
   "model_analyzer": "True",
-  "repeat_data_cleaning": "True",
-  "disaggregation_done": "True",
-  "data_cleaning_done": "True",
+  "repeat_data_cleaning": "False",
+  "disaggregation_done": "False",
+  "data_cleaning_done": "False",
   "repeat_training": "True",
-  "training_done": "True",
+  "training_done": "False",
   "root_path": "./",
   "metaheuristics_path": "./0.0_metaheuristics/",
   "hyperparameters_path": "./0.1_hyperparameters/",
@@ -30,16 +30,15 @@
   "models_evaluation_path": "./9.1_MODELS_EVALUATION/",
   "others_outputs_path": "./9.2_OTHERS_OUTPUTS/",
   "others_inputs_path": "./9.3_OTHERS_INPUTS/",
-  "method_0_folder": "Cover/",
-  "method_1_folder": "JMiPOD/",
-  "method_2_folder": "JUNIWARD/",
-  "method_3_folder": "UERD/",
+  "label_0_folder": "/train/cat/",
+  "label_1_folder": "/train/dog/",
+  "label_0_val_folder": "/validation/cat/",
+  "label_1_val_folder": "/validation/dog/",
   "weights_loaded_in evaluation": "from_today",
   "repeat_select_images_for_evaluation": "True",
-  "nof_methods": 4,
-  "nof_quality_factors": 3,
+  "nof_methods": 2,
   "nof_K_fold_groups": 1,
-  "nof_evaluation_samples_by_group": 75,
+  "nof_evaluation_samples_by_group": 150,
   "use_quality_factor_for_disaggregation": "False",
   "use_efficientNetB2": "True",
   "custom_model_evaluation_set_not_trainable": "True",
