--- a/settings.json
+++ b/settings.json
@@ -8,10 +8,10 @@
   "control": "handler",
   "model_analyzer": "True",
   "repeat_data_cleaning": "False",
-  "disaggregation_done": "False",
-  "data_cleaning_done": "False",
+  "disaggregation_done": "True",
+  "data_cleaning_done": "True",
   "repeat_training": "True",
-  "training_done": "False",
+  "training_done": "True",
   "root_path": "./",
   "metaheuristics_path": "./0.0_metaheuristics/",
   "hyperparameters_path": "./0.1_hyperparameters/",
@@ -30,10 +30,10 @@
   "models_evaluation_path": "./9.1_MODELS_EVALUATION/",
   "others_outputs_path": "./9.2_OTHERS_OUTPUTS/",
   "others_inputs_path": "./9.3_OTHERS_INPUTS/",
-  "label_0_folder": "/train/cat/",
-  "label_1_folder": "/train/dog/",
-  "label_0_val_folder": "/validation/cat/",
-  "label_1_val_folder": "/validation/dog/",
+  "class_0_folder": "train/cat/",
+  "class_1_folder": "train/dog/",
+  "class_0_evaluation_folder": "evaluation/cat/",
+  "class_1_evaluation_folder": "evaluation/dog/",
   "weights_loaded_in evaluation": "from_today",
   "repeat_select_images_for_evaluation": "True",
   "nof_methods": 2,
