--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # for EfficienNetB2 also tf-nightly 2.4.0
 tensorflow~=2.2.0
-Pillow~=7.2.0
+Pillow>=8.1.1
 numpy~=1.19.0
 pandas~=1.0.5
 scikit-learn~=0.23.1
